user entity add, refactoring

--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
 PORT=4200
 MONGODB_USER=me
 MONGODB_PASS=1q2w3e4r
+JWT_ACCESS_SECRET=jwt-secret-key
+JWT_REFRESH_SECRET=jwt-refresh-secret-key
+CLIENT_URL=http://localhost:3000
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=urlshortenermailer@gmail.com
+; SMTP_PASSWORD=1Q2W3E4R!R
+SMTP_PASSWORD=crjxprsaugwixfex
+API_URL=http://localhost:4200
