--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
         "express-validator": "^6.14.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.4.1",
-        "nodemailer": "^6.6.1"
+        "nodemailer": "^6.6.1",
+        "uuid": "^9.0.0"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
@@ -31,6 +32,7 @@
         "@types/jsonwebtoken": "^8.5.8",
         "@types/node": "^18.0.0",
         "@types/nodemailer": "^6.4.4",
+        "@types/uuid": "^8.3.4",
         "concurrently": "^7.2.2",
         "nodemon": "^2.0.18",
         "typescript": "^4.7.4"
